        PR opt/10315         * config/rs6000/rs6000.c (rs6000_emit_move): Only elide proper         checks during reload; use validize_mem instead of adjust_address.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@66071 138bc75d-0d04-0410-961f-82ee72b054a4